Sign in VC made. Now connecting to firebase

--- a/Udemy Snapchat/Base.lproj/Main.storyboard
+++ b/Udemy Snapchat/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Sign In View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="SignInViewController" customModule="Udemy_Snapchat" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,8 +21,65 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SwagChat" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ieW-aS-KGw">
+                                <rect key="frame" x="97" y="40" width="183" height="48"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NbY-zu-J8w">
+                                <rect key="frame" x="87.5" y="118" width="200" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="uO2-6P-iAE"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cFl-Xw-vNY">
+                                <rect key="frame" x="87.5" y="168" width="200" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="0vW-6S-Hno"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xN3-pT-C6a">
+                                <rect key="frame" x="160" y="228" width="54" height="30"/>
+                                <state key="normal" title="Swagify"/>
+                                <connections>
+                                    <action selector="swagifyTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8qj-BO-3kc"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="NbY-zu-J8w" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="1jX-hp-FZR"/>
+                            <constraint firstItem="ieW-aS-KGw" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="9HF-9K-G0n"/>
+                            <constraint firstItem="NbY-zu-J8w" firstAttribute="top" secondItem="ieW-aS-KGw" secondAttribute="bottom" constant="30" id="Nhe-0N-YXh"/>
+                            <constraint firstItem="NbY-zu-J8w" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="97" id="UCB-ap-Bgz"/>
+                            <constraint firstItem="xN3-pT-C6a" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="VPg-7z-XWd"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="NbY-zu-J8w" secondAttribute="trailing" constant="66" id="X3A-J5-crk"/>
+                            <constraint firstItem="ieW-aS-KGw" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="81" id="mp9-DH-fvN"/>
+                            <constraint firstItem="cFl-Xw-vNY" firstAttribute="leading" secondItem="NbY-zu-J8w" secondAttribute="leading" id="q9f-3p-L97"/>
+                            <constraint firstItem="xN3-pT-C6a" firstAttribute="top" secondItem="cFl-Xw-vNY" secondAttribute="bottom" constant="30" id="ued-yI-m55"/>
+                            <constraint firstItem="cFl-Xw-vNY" firstAttribute="top" secondItem="NbY-zu-J8w" secondAttribute="bottom" constant="20" id="wfq-QV-k6O"/>
+                            <constraint firstItem="cFl-Xw-vNY" firstAttribute="trailing" secondItem="NbY-zu-J8w" secondAttribute="trailing" id="xWj-Tn-gYr"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="UCB-ap-Bgz"/>
+                                <exclude reference="X3A-J5-crk"/>
+                                <exclude reference="xWj-Tn-gYr"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <connections>
+                        <outlet property="emailTextField" destination="NbY-zu-J8w" id="TSS-k8-OgS"/>
+                        <outlet property="passwordTextField" destination="cFl-Xw-vNY" id="PpH-Lc-WOQ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
